--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,11 @@ server.ssl.key-store-type=PKCS12
 server.ssl.key-store-password=azerty
 server.ssl.key-alias=myapp
 
+# Keycloak Config
+spring.security.oauth2.client.registration.keycloak.client-id=spring-boot-app
+spring.security.oauth2.client.registration.keycloak.client-secret=HC8CAdJXicjYIHBXBTOUvTifFGqnqoXM
+spring.security.oauth2.client.registration.keycloak.scope=openid
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.keycloak.redirect-uri=https://localhost:8443/login/oauth2/code/keycloak
+
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://keycloak-container:8080/realms/pigeonSecurity
