--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=PigeonSkyRaceSpringSecurity
 
 spring.profiles.active=prod
-#logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security=DEBUG
 server.ssl.enabled=true
-
 server.port=8443
 server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-type=PKCS12
@@ -18,6 +17,7 @@ spring.security.oauth2.client.registration.keycloak.authorization-grant-type=aut
 spring.security.oauth2.client.registration.keycloak.redirect-uri=https://localhost:8443/login/oauth2/code/keycloak
 # OAuth2 Client configuration
 spring.security.oauth2.client.provider.keycloak.issuer-uri=http://keycloak-container:8080/realms/pigeonSecurity
+
 
 #configure your Spring Boot application as a resource server that consumes JWT tokens issued by Keycloak.
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak-container:8080/realms/pigeonSecurity
