DEP-4 Mettre en place l'authentification et l'autorisation avec OAuth 2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,8 +18,18 @@ spring.security.oauth2.client.registration.keycloak.redirect-uri=https://localho
 # OAuth2 Client configuration
 spring.security.oauth2.client.provider.keycloak.issuer-uri=http://keycloak-container:8080/realms/pigeonSecurity
 
-
 #configure your Spring Boot application as a resource server that consumes JWT tokens issued by Keycloak.
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak-container:8080/realms/pigeonSecurity
 # JSON Web Key Set (JWKS) for validating JWT tokens is located.
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://keycloak-container:8080/realms/pigeonSecurity/protocol/openid-connect/certs
+
+# JWT role configuration
+spring.security.oauth2.resourceserver.jwt.authorities-claim-name=realm_access.roles
+spring.security.oauth2.resourceserver.jwt.authority-prefix=ROLE_
+
+# Security constraints mapping
+#keycloak.security-constraints[0].authRoles[0]=USER
+#keycloak.security-constraints[0].urlPattern=/api/users/
+#keycloak.security-constraints[1].authRoles[0]=ADMIN
+#keycloak.security-constraints[1].urlPattern=/api/admin/
+#
